REGRESSION(286771@main): ASSERTION FAILED: &object == m_impl->template get<T>() in WTF::WeakPtr<WebCore::WebAnimation, WebCore::WeakPtrImplWithEventTargetData>::WeakPtr(const T &, EnableWeakPtrThreadingAssertions) under AnimationTimelinesController::setTi https://bugs.webkit.org/show_bug.cgi?id=283346 rdar://140180425

Reviewed by Antoine Quint.

We need to keep around a strong reference to the WebAnimation awaiting attachment to prevent
it from being destroyed.

* Source/WebCore/animation/AnimationTimelinesController.cpp:
(WebCore::AnimationTimelinesController::updateAnimationsAndSendEvents):
(WebCore::AnimationTimelinesController::setTimelineForName):
* Source/WebCore/animation/AnimationTimelinesController.h:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::WebAnimation):
(WebCore::WebAnimation::~WebAnimation):
* Source/WebCore/animation/WebAnimation.h:
(WebCore::WebAnimation::setIsPendingTimelineAttachment):
(WebCore::WebAnimation::isPendingTimelineAttachment):

Canonical link: https://commits.webkit.org/286920@main