Source/WebCore/animation/AnimationTimelinesController.cpp
@@ -158,7 +158,7 @@ void AnimationTimelinesController::updateAnimationsAndSendEvents(ReducedResoluti
             // schedule invalidation if required for this animation.
             animation->tick();
 
-            if (!animation->isRelevant() && !animation->needsTick())
+            if (!animation->isRelevant() && !animation->needsTick() && !isPendingTimelineAttachment(animation))
                 animationsToRemove.append(animation);
 
             if (auto* transition = dynamicDowncast<CSSTransition>(animation.get())) {
@@ -566,6 +566,13 @@ void AnimationTimelinesController::updateNamedTimelineMapForTimelineScope(const 
         break;
     }
     attachPendingOperations();
+}
+
+bool AnimationTimelinesController::isPendingTimelineAttachment(const WebAnimation& animation) const
+{
+    return m_pendingAttachOperations.containsIf([&] (auto& entry) {
+        return entry.animation.ptr() == &animation;
+    });
 }
 
 #if ENABLE(THREADED_ANIMATION_RESOLUTION)
